--- a/client/public/css/base.css
+++ b/client/public/css/base.css
@@ -1,8 +1,16 @@
+@import url(color.css);
+@import url(text.css);
+
+@font-face {
+    font-family: Noto-sans;
+    src: url(../font/ofont.ru_Noto\ Sans.ttf);
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: Noto-sans;
 }
 
 html,
@@ -10,6 +18,7 @@ body,
 #app {
     width: 100%;
     height: 100%;
+    background-color: var(--color_background-2_white);
 }
 
 a,
@@ -23,9 +32,26 @@ img {
 }
 
 button,
-input[type="submit"] {
+input {
     box-shadow: none;
-    background-color: transparent;
-    background: none;
-    cursor: pointer;
+    border: none;
+    outline: none;
+    transition-duration: 0.2s;
+    padding: 6px 10px;
+    border-radius:5px;
 }
+input[type='submit'], button{
+    cursor: pointer;
+    background: var(--color_accent_lightBlue);
+    color: var(--color_background-2_white);
+}
+input[type='submit']:hover{
+    background: var(--color_accent_darkBlue);
+}
+
+h1{font-size: var(--size_textDesktop_header-1)}
+h2{font-size:var(--size_textDesktop_header-2)}
+p{font-size: var(--size_textDesktop_body-1)}
+p.small{font-size: var(--size_textDesktop_body-2)}
+.errorMessage{color: rgb(244, 111, 111);}
+.successMessage{color: rgb(81, 211, 81);}
