Добавлены настройки администратора

--- a/client/public/css/color.css
+++ b/client/public/css/color.css
@@ -3,6 +3,8 @@
     --color_background-2_white: #E7EBFA;
     --color_background-3_white: #FFFFFF;
     --color_background-4_white: #D0DFE6;
+    --color_background-5_grayTransparent: #333333aa;
+
 
     --color_accent_lightBlue: #0093B5;
     --color_accent_darkBlue: #00384F;
