--- a/client/public/css/base.css
+++ b/client/public/css/base.css
@@ -25,10 +25,17 @@ a,
 a:visited,
 a:hover {
     text-decoration: none;
+    font-size: var(--size_textDesktop_body-2);
+    user-select: none;
+    cursor: pointer;
 }
 
 img {
     width: 100%;
+}
+
+ul,li{
+    list-style: none;
 }
 
 button,
@@ -39,13 +46,14 @@ input {
     transition-duration: 0.2s;
     padding: 6px 10px;
     border-radius:5px;
+    font-family: Noto-sans;
 }
 input[type='submit'], button{
     cursor: pointer;
     background: var(--color_accent_lightBlue);
     color: var(--color_background-2_white);
 }
-input[type='submit']:hover{
+input[type='submit']:hover, button:hover{
     background: var(--color_accent_darkBlue);
 }
 
