--- a/client/public/css/base.css
+++ b/client/public/css/base.css
@@ -56,6 +56,7 @@ input[type='submit'], button{
     cursor: pointer;
     background: var(--color_accent_lightBlue);
     color: var(--color_background-2_white);
+    margin-top: 10px;
 }
 input[type='submit']:hover, button:hover{
     background: var(--color_accent_darkBlue);
