Добавлена форма и таблица для сбора ОС. Исправлена таблица users и переведено все в PascalCase

--- a/client/public/css/base.css
+++ b/client/public/css/base.css
@@ -88,6 +88,12 @@ button:hover {
     background: var(--color_accent_darkBlue);
 }
 
+input[type='reset']:focus,
+input[type='submit']:focus,
+button:focus{
+    background-color: var(--color_accent_pink);
+}
+
 h1 {
     font-size: var(--size_textDesktop_header-1)
 }
